--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "laravel-vue-i18n": "^2.7.1"
+        "laravel-vue-i18n": "^2.7.1",
+        "vue-the-mask": "^0.11.1"
     }
 }
