ajuste docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     depends_on:
       - db_dino
     networks:
-      - minha_rede
+      - rede_dino
       - reverse-proxy
 
 networks :
