--- a/volumes/dinocash/composer.json
+++ b/volumes/dinocash/composer.json
@@ -53,7 +53,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "./vendor/bin/pest"
+        
     },
     "extra": {
         "laravel": {
