--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: DinoCash
 
 on:
   push:
@@ -12,24 +12,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Setup PHP
+      uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '8.0'
-    - uses: actions/checkout@v3
+        php-version: '8.1'
+
+    - name: Install Composer Dependencies
+      run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
+
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
+
+    - name: Generate Application Key
       run: php artisan key:generate
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
+
+    - name: Create MariaDB Database
       run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
+        sudo apt-get update
+        sudo apt-get install mariadb-server
+        sudo mysql -e "CREATE DATABASE IF NOT EXISTS laravel;"
+        sudo mysql -e "GRANT ALL ON laravel.* TO 'laravel'@'%' IDENTIFIED BY 'password';"
+
+    - name: Install Pest
+      run: composer require pestphp/pest --dev
+
+    - name: Execute Pest tests
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+        DB_CONNECTION: mysql
+        DB_DATABASE: laravel
+        DB_USERNAME: laravel
+        DB_PASSWORD: password
+      run: ./vendor/bin/pest
