--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,44 +8,46 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.1'
+      - name: Setup PHP
+        uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        with:
+          php-version: '8.1'
 
-    - name: Install Composer Dependencies
-      run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
+      - name: Install Composer Dependencies
+        run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
 
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    - name: Generate Application Key
-      run: php artisan key:generate
+      - name: Generate Application Key
+        run: php artisan key:generate
 
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
-    - name: Create MariaDB Database
-      run: |
-        sudo apt-get update
-        sudo apt-get install mariadb-server
-        sudo mysql -e "CREATE DATABASE IF NOT EXISTS laravel;"
-        sudo mysql -e "GRANT ALL ON laravel.* TO 'laravel'@'%' IDENTIFIED BY 'password';"
+      - name: Create MariaDB Database
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y mariadb-server
+          sudo mysql -e "CREATE DATABASE IF NOT EXISTS laravel;"
+          sudo mysql -e "GRANT ALL ON laravel.* TO 'laravel'@'%' IDENTIFIED BY 'password';"
 
-    - name: Install Pest
-      run: composer require pestphp/pest --dev
+      - name: Update .env for MariaDB
+        run: |
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=laravel" >> .env
+          echo "DB_USERNAME=laravel" >> .env
+          echo "DB_PASSWORD=password" >> .env
 
-    - name: Execute Pest tests
-      env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: laravel
-        DB_USERNAME: laravel
-        DB_PASSWORD: password
-      run: ./vendor/bin/pest
+      - name: Install Pest
+        run: composer require pestphp/pest --dev
+
+      - name: Execute Pest tests
+        run: ./vendor/bin/pest
