--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           php-version: '8.1'
 
+      - name: Install Composer
+        uses: php-actions/composer@v6
+        
       - name: Install Composer Dependencies
         run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
 
