--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Switch to app
+        run: cd volumes/dinocash
+
       - name: Setup PHP
         uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
