--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Switch to app
-        run: cd volumes/dinocash
-
       - name: Setup PHP
         uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
@@ -23,18 +20,28 @@ jobs:
 
       - name: Install Composer
         uses: php-actions/composer@v6
-        
+        with:
+          working-directory: volumes/dinocash
+
       - name: Install Composer Dependencies
-        run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
+        run: |
+          composer install --no-scripts --no-interaction --no-progress --prefer-dist
+        working-directory: volumes/dinocash
 
       - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+        run: |
+          php -r "file_exists('.env') || copy('.env.example', '.env');"
+        working-directory: volumes/dinocash
 
       - name: Generate Application Key
-        run: php artisan key:generate
+        run: |
+          php artisan key:generate
+        working-directory: volumes/dinocash
 
       - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
+        run: |
+          chmod -R 777 storage bootstrap/cache
+        working-directory: volumes/dinocash
 
       - name: Create MariaDB Database
         run: |
@@ -42,6 +49,7 @@ jobs:
           sudo apt-get install -y mariadb-server
           sudo mysql -e "CREATE DATABASE IF NOT EXISTS laravel;"
           sudo mysql -e "GRANT ALL ON laravel.* TO 'laravel'@'%' IDENTIFIED BY 'password';"
+        working-directory: volumes/dinocash
 
       - name: Update .env for MariaDB
         run: |
@@ -51,9 +59,14 @@ jobs:
           echo "DB_DATABASE=laravel" >> .env
           echo "DB_USERNAME=laravel" >> .env
           echo "DB_PASSWORD=password" >> .env
+        working-directory: volumes/dinocash
 
       - name: Install Pest
-        run: composer require pestphp/pest --dev
+        run: |
+          composer require pestphp/pest --dev
+        working-directory: volumes/dinocash
 
       - name: Execute Pest tests
-        run: ./vendor/bin/pest
+        run: |
+          ./vendor/bin/pest
+        working-directory: volumes/dinocash
