--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Composer
         uses: php-actions/composer@v6
         with:
-          working-directory: volumes/dinocash
+          container_workdir: /var/www/html
 
       - name: Install Composer Dependencies
         run: |
