--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,6 +9,12 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./volumes/dinocash
+        
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
