--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,7 +13,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./volumes/dinocash
+        working-directory: volumes/dinocash
         
     steps:
       - name: view files
