--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,14 +12,15 @@ jobs:
     
     services:
         db_dino:
-          image: mariadb
+          image: mariadb:latest
           ports:
-            - 3306:3306/tcp
+            - 3306:3306
           env:
-            MYSQL_HOST: localhost
+            TZ: America/Sao_Paulo
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: dinocash
-          options: --health-cmd="mysqladmin ping" --health-interval 5s --health-timeout 2s --health-retries 5
+            MYSQL_USER: dinocash
+            MYSQL_PASSWORD: dinocash
           
     steps:
       - name: Checkout repository
