--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -59,5 +59,6 @@ jobs:
       - name: Execute Pest tests
         run: |
           cd volumes/dinocash
+          echo "DB_HOST=127.0.0.1" >> .env
           php artisan migrate
           ./vendor/bin/pest
