--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -12,6 +12,7 @@
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.1",
+        "daisyui": "^4.4.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
@@ -19,6 +20,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.0.18",
         "laravel-vue-i18n": "^2.7.1",
         "vue-the-mask": "^0.11.1"
     }
