--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: DinoCash CI/CD
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "feature/*"]
   pull_request:
     branches: ["main"]
 
@@ -79,30 +79,30 @@ jobs:
           cd volumes/dinocash
           php artisan migrate
           ./vendor/bin/pest
-  laravel-deploy:
-    runs-on: ubuntu-latest
+  # laravel-deploy:
+  #   runs-on: ubuntu-latest
     
-    needs: laravel-tests
+  #   needs: laravel-tests
 
-    steps:
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+  #   steps:
+  #     - name: Setup SSH
+  #       uses: webfactory/ssh-agent@v0.5.1
+  #       with:
+  #         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #         # known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
-      - name: SSH into Server
-        run: ssh root@limbotecnologia.com.br
+  #     - name: SSH into Server
+  #       run: ssh root@limbotecnologia.com.br
 
-      - name: CD into Project
-        run: cd projects/dinocash
+  #     - name: CD into Project
+  #       run: cd projects/dinocash
 
-      - name: Switch to Main Branch and Pull
-        run: |
-          git switch main
-          git pull
+  #     - name: Switch to Main Branch and Pull
+  #       run: |
+  #         git switch main
+  #         git pull
 
-      - name: Run Artisan Migrate and NPM Build
-        run: |
-          docker-compose exec php_dino php artisan migrate
-          npm run build
+  #     - name: Run Artisan Migrate and NPM Build
+  #       run: |
+  #         docker-compose exec php_dino php artisan migrate
+  #         npm run build
