--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.0.18",
+        "dayjs": "^1.11.10",
         "laravel-vue-i18n": "^2.7.1",
         "vue-the-mask": "^0.11.1"
     }
