--- a/volumes/dinocash/composer.json
+++ b/volumes/dinocash/composer.json
@@ -54,7 +54,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": "./vendor/bin/pest"
+        "test": "./vendor/bin/pest",
+        "test-coverage": "XDEBUG_MODE=coverage ./vendor/bin/pest --coverage"
+
         
     },
     "extra": {
