--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -22,6 +22,9 @@ services:
     restart: unless-stopped
     ports:
       - "5173:5173"
+    environment:
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
     volumes:
       - ./volumes/dinocash:/var/www/html
     networks:
