--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -22,8 +22,11 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.0.18",
+        "@vee-validate/yup": "^4.12.2",
         "dayjs": "^1.11.10",
         "laravel-vue-i18n": "^2.7.1",
-        "vue-the-mask": "^0.11.1"
+        "vee-validate": "^4.12.2",
+        "vue-the-mask": "^0.11.1",
+        "yup": "^1.3.2"
     }
 }
