--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -23,7 +23,9 @@
     "dependencies": {
         "@heroicons/vue": "^2.0.18",
         "@vee-validate/yup": "^4.12.2",
+        "date-fns": "^2.30.0",
         "dayjs": "^1.11.10",
+        "flatpickr": "^4.6.13",
         "laravel-vue-i18n": "^2.7.1",
         "vee-validate": "^4.12.2",
         "vue-the-mask": "^0.11.1",
