--- a/volumes/dinocash/.env.example
+++ b/volumes/dinocash/.env.example
@@ -45,9 +45,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1719518
+PUSHER_APP_KEY=e24f0a0c26158531d1fd
+PUSHER_APP_SECRET=d5a459af96688dd9de30
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
