--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -27,8 +27,11 @@
         "dayjs": "^1.11.10",
         "flatpickr": "^4.6.13",
         "laravel-vue-i18n": "^2.7.1",
+        "qrcode-pix": "5.0.0",
+        "qrcode-vue3": "^1.6.8",
         "vee-validate": "^4.12.2",
         "vue-the-mask": "^0.11.1",
+        "vue3-toastify": "^0.1.14",
         "yup": "^1.3.2"
     }
 }
