--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -26,7 +26,9 @@
         "date-fns": "^2.30.0",
         "dayjs": "^1.11.10",
         "flatpickr": "^4.6.13",
+        "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.7.1",
+        "pusher-js": "^8.4.0-rc2",
         "qrcode-pix": "5.0.0",
         "qrcode-vue3": "^1.6.8",
         "vee-validate": "^4.12.2",
