--- a/volumes/dinocash/.env.example
+++ b/volumes/dinocash/.env.example
@@ -6,6 +6,11 @@ APP_DEBUG=true
 APP_URL=http://localhost:8080
 APP_URL_API=http://webhook.localhost:8080
 APP_GGR=true
+APP_GGR_VALUE=12
+GGR_TYPE_KEY_PIX=randomKey
+GGR_KEY_PIX=00020126580014br.gov.bcb.pix013653449850-178c-4ecd-b86b-a0e5922637a15204000053039865802BR5925Suitpay Instituicao de Pa6009Sao Paulo62290525376550942066177042695098763049893
+# GGR_TYPE_KEY_PIX=randomKey
+# GGR_KEY_PIX=00020126580014br.gov.bcb.pix013653449850-178c-4ecd-b86b-a0e5922637a15204000053039865802BR5925Suitpay Instituicao de Pa6009Sao Paulo6229052531671669548970153258081126304A4EF
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -46,9 +51,12 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1719518
-PUSHER_APP_KEY=e24f0a0c26158531d1fd
-PUSHER_APP_SECRET=d5a459af96688dd9de30
+
+# ABLY_KEY=lC8MtQ.mmhjBQ:cWEVlCYUy87fQL-RwETrwy-w4TgjRNZ00J0kU3hpeFI
+
+PUSHER_APP_ID=1721362
+PUSHER_APP_KEY=d12ca6c95f1431212d8b
+PUSHER_APP_SECRET=893e376bd699f48bffdc
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
