--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -31,6 +31,7 @@
         "pusher-js": "^8.4.0-rc2",
         "qrcode-pix": "5.0.0",
         "qrcode-vue3": "^1.6.8",
+        "screen-orientation": "^1.0.3",
         "vee-validate": "^4.12.2",
         "vue-the-mask": "^0.11.1",
         "vue3-toastify": "^0.1.14",
