--- a/volumes/dinocash/resources/pwa/manifest.json
+++ b/volumes/dinocash/resources/pwa/manifest.json
@@ -1,18 +1,18 @@
 {
-    "name": "DinoCash",
-    "short_name": "DinoCash",
+    "name": "Dinocash",
+    "short_name": "Dinocash",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
     "start_url": "/",
     "icons": [
         {
-            "src": "./favicon.ico",
+            "src": "/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "./favicon.ico",
+            "src": "/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
