--- a/volumes/dinocash/public/manifest.json
+++ b/volumes/dinocash/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "DinoCash",
-    "short_name": "DinoCash",
+    "name": "Dinocash",
+    "short_name": "Dinocash",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
