--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,8 +16,8 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 8080;
-        server_name dinocash.io;
+        listen 8083;
+        server_name dinobet.vip;
         root /var/www/html/public;
 
         location / {
@@ -25,7 +25,7 @@ http {
         }
 
         location ~ ^/index\.php(/|$) {
-            fastcgi_pass php_dino:9000;
+            fastcgi_pass php_dino_poki:9000;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
