--- a/volumes/dinocash/public/manifest.json
+++ b/volumes/dinocash/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Dinocash",
-    "short_name": "Dinocash",
+    "name": "Dinobet",
+    "short_name": "Dinobet",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
     "display": "standalone",
