--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -28,6 +28,7 @@
         "flatpickr": "^4.6.13",
         "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.7.1",
+        "lodash": "^4.17.21",
         "pusher-js": "^8.4.0-rc2",
         "qrcode-pix": "5.0.0",
         "qrcode-vue3": "^1.6.8",
