--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - ./volumes/dinocash:/var/www/html:rw
     container_name: dinocash_web
     environment:
-      - VIRTUAL_HOST=dinocash.io
-      - LETSENCRYPT_HOST=dinocash.io
+      - VIRTUAL_HOST=dinocash.site
+      - LETSENCRYPT_HOST=dinocash.site
       - LETSENCRYPT_EMAIL=nicollasacruz@gmail.com
       - VIRTUAL_PORT=8080
     depends_on:
@@ -28,47 +28,6 @@ services:
       - ./volumes/dinocash:/var/www/html:rw
     networks:
       - rede_dino
-
-  db_dino:
-    image: mariadb:latest
-    environment:
-      - TZ=${TZ:-America/Sao_Paulo}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-dino}
-      - MYSQL_USER=${MYSQL_USER:-dino}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-dino}
-    volumes:
-      - ./.docker/config/mysql:/etc/mysql/conf.d
-      - ./volumes/mysql/data:/var/lib/mysql
-    restart: unless-stopped
-    networks:
-      - rede_dino
-      - database
- 
-  redis_dino:
-    image: redis:latest
-    restart: unless-stopped
-    networks:
-      - rede_dino
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    environment:
-      - VIRTUAL_HOST=database.dinocash.io
-      - LETSENCRYPT_HOST=database.dinocash.io
-      - LETSENCRYPT_EMAIL=nicollasacruz@gmail.com
-      - VIRTUAL_PORT=9000
-      - PMA_ARBITRARY=1
-      - PMA_HOST=db_dino
-      - PMA_PORT=3306
-    ports:
-      - "9000:80"
-    restart: unless-stopped
-    depends_on:
-      - db_dino
-    networks:
-      - rede_dino
-      - reverse-proxy
 
 networks:
   rede_dino:
