--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -26,7 +26,8 @@ WORKDIR /var/www/html
 
 RUN chown -R appuser:appuser /var/www/html
 
-RUN chmod 777 -R storage bootstrap
+RUN chmod 777 -R /var/www/html/bootstrap/
+RUN chmod 777 -R /var/www/html/storage/
 
 USER appuser
 
