ajustes saque afiliado

--- a/volumes/dinocash/package.json
+++ b/volumes/dinocash/package.json
@@ -27,6 +27,7 @@
         "date-fns": "^2.30.0",
         "dayjs": "^1.11.10",
         "flatpickr": "^4.6.13",
+        "inputmask": "^5.0.8",
         "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.7.1",
         "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
         "qrcode-pix": "5.0.0",
         "qrcode-vue3": "^1.6.8",
         "screen-orientation": "^1.0.3",
+        "v-money3": "^3.24.0",
         "vee-validate": "^4.12.2",
         "vue-the-mask": "^0.11.1",
         "vue3-toastify": "^0.1.14",
