--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -15,7 +15,7 @@ RUN echo "memory_limit = 6000M" >> /usr/local/etc/php/php.ini
 RUN mkdir -p /etc/apt/keyrings
 
 RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
-RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
+RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.10.0 nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
 
 RUN apt-get update && apt-get install nodejs -y
 RUN npm install npm -g
