--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -4,13 +4,13 @@ FROM php:8.1-fpm
 
 RUN useradd -ms /bin/bash appuser
 
-RUN apt-get update && apt-get install libzip-dev ca-certificates curl gnupg wget -y
+RUN apt-get update && apt-get install libzip-dev ca-certificates curl gnupg wget libmemcached-dev zlib1g-dev libssl-dev -y
 
 RUN docker-php-ext-install pdo_mysql zip
 
-RUN pecl install xdebug && docker-php-ext-enable xdebug
+RUN pecl install memcached && docker-php-ext-enable memcached
 
-RUN echo "memory_limit = 6000M" >> /usr/local/etc/php/php.ini
+RUN echo "memory_limit = 40000M" >> /usr/local/etc/php/php.ini
 
 RUN mkdir -p /etc/apt/keyrings
 
