--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  2;
+worker_processes  6;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -16,8 +16,8 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 8089;
-        server_name dev.dinocash.io;
+        listen 8080;
+        server_name dinocash.io;
         root /var/www/html/public;
 
         location / {
@@ -25,7 +25,7 @@ http {
         }
 
         location ~ ^/index\.php(/|$) {
-            fastcgi_pass php_dino_test:9000;
+            fastcgi_pass php_dino:9000;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
